Capping the FPS to 60 to make sure Tilengine isn't going too fast on screen with high refresh rates

--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,17 @@ x64_Debug/
 x64_Release/
 *.pyc
 *.exe
+*.dll
 
 docs/screens/
 samples/assets/mslug/
 samples/assets/sunny_land/
 samples/c/*.dll
 samples/csharp/*.dll
+
+src/libpng
+src/sdl
+src/x64_Release
 
 # deploy packages
 *.zip
