WIP new CRT effect * Integrates new module crt with the implementation * Updates Window module to use new crt module, removing old implementation * Keeps old public API for backwards compatibility, but parameters
Needs restoring `dstrect` parameter when blitting to keep aspect ratio, lost during upgrade to new implementation

--- a/src/Tilengine.vcxproj
+++ b/src/Tilengine.vcxproj
@@ -220,6 +220,7 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClCompile Include="Blitters.c" />
     <ClCompile Include="cJSON.c" />
     <ClCompile Include="crc32.c" />
+    <ClCompile Include="crt.c" />
     <ClCompile Include="Draw.c" />
     <ClCompile Include="GaussianBlur.c" />
     <ClCompile Include="Layer.c" />
@@ -259,6 +260,7 @@ copy $(TargetDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)
     <ClInclude Include="Blitters.h" />
     <ClInclude Include="cJSON.h" />
     <ClInclude Include="crc32.h" />
+    <ClInclude Include="crt.h" />
     <ClInclude Include="Debug.h" />
     <ClInclude Include="DIB.h" />
     <ClInclude Include="Draw.h" />
