--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test_tiles.c" />
+    <ClCompile Include="test_window.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CE31C686-C6BF-4262-8982-D858830BE967}</ProjectGuid>
