Tilengine 2.15 * Supports monitors with non 60 Hz refresh rate, auto detects with TLN_CreateWindow() * Adds TLN_SetTargetFps() and TLN_GetTargetFps() to manually overryde desired fps and get current value * Adds CWF_NOVSYNC to disable vsync between frames, required when setting target fps to a different refresh rate than the monitor * When disabling CWF_NOVSYNC, uses timer to approximate desired frame rate. On Windows uses 1 ms precison delays with multimedia timer * Built-in window: use ALT-1 to ALT-5 to change window scaling factor in realtime * Adds test.c to validate new features

--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test_window.c" />
+    <ClCompile Include="test_fps.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CE31C686-C6BF-4262-8982-D858830BE967}</ProjectGuid>
